--- a/ProyectoCatedraPED/ProyectoCatedraPED.csproj
+++ b/ProyectoCatedraPED/ProyectoCatedraPED.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GrafoLibro.cs" />
+    <Compile Include="Lectura.cs" />
     <Compile Include="Libro.cs" />
     <Compile Include="LoginForm.cs">
       <SubType>Form</SubType>
@@ -73,6 +75,7 @@
     <Compile Include="TarjetaLibro.Designer.cs">
       <DependentUpon>TarjetaLibro.cs</DependentUpon>
     </Compile>
+    <Compile Include="Usuario.cs" />
     <Compile Include="UsuarioForm.cs">
       <SubType>Form</SubType>
     </Compile>
